--- a/TOC/oricon/oricon.css
+++ b/TOC/oricon/oricon.css
@@ -5,6 +5,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
  }
  span{
+ white-space: nowrap;	 
  font-size: .8em
  }
   .center {
@@ -17,7 +18,6 @@ body {
 .data {
   float: left;
   padding: 10px;
-  overflow-x: scroll;
   width: 74%;
   min-width: 830px ; 
   margin: 0 auto ; 
