--- a/TOC/oricon/oricon.css
+++ b/TOC/oricon/oricon.css
@@ -154,7 +154,10 @@ text-align: center;
   font-size: 1.5em;
   border-bottom: 1.5px solid black;
 }
-
+ h2 {
+  font-size: 1.3em;
+  border-bottom: 1.3px solid black;
+}
 .bookmark a {
 	display: block	;
     text-decoration: none;
