--- a/TOC/design/18_2122/design.css
+++ b/TOC/design/18_2122/design.css
@@ -113,23 +113,29 @@ div.gallery {
   border: 2px solid #777;
 }
 div.gallery:hover {
-  border: 1px solid black;
+  border: 2px solid black;
 }
 div.gallery img {
   width: 100%;
   height: auto;
 }
 div.desc {
-  min-height:6em;
-  padding: 10px 8px;
+height:5em;	
+width:100%
+  display: flex;
+  align-items: center;
+  padding: 5px;
   text-align: center;
+  white-space: nowrap;
+  overflow:hidden;
+  text-overflow:auto;
 }
 * {
   box-sizing: border-box;
 }
 .responsive {
-  padding: 0 5px;
-	margin-bottom: 5px;
+  padding: 0px 5px;
+  margin-bottom:5px;
   float: left;
   width: 24.99999%;
 }
