--- a/TOC/amazon/style.css
+++ b/TOC/amazon/style.css
@@ -36,3 +36,9 @@
 		border: 1px solid #ccc; 
 		text-align: left; 
 	}
+	table td:nth-child(1){
+		text-align: right;
+	}
+	table td:nth-child(2){
+		text-align: right;
+	}	
