--- a/TOC/amazon/style.css
+++ b/TOC/amazon/style.css
@@ -5,13 +5,21 @@
      body { 
 	   font-family: "Courier New", Courier, monospace; 
      }
+	 #header {
+	  margin: 15px;
+	 }
+	 #footer {
+	  margin: 15px;
+	 }	 
     #page-wrap {
-	  margin: 50px;
+	  margin: 10px 15px;
     }
     p {
-	 margin: 20px 0; 
+	 margin: 15px 0; 
     }
-
+	hr {
+	border-top: 1.5px solid gray;
+	}	
 	/* 
 	Generic Styling, for Desktops/Laptops 
 	*/
