--- a/TOC/reprint/issue.css
+++ b/TOC/reprint/issue.css
@@ -19,7 +19,7 @@
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-	white-space:nowrap;
+
 	}
 #reprint_11690 .xl6311690{
 	padding-top:1px;
@@ -38,7 +38,7 @@
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-	white-space:nowrap;
+
 	}
 #reprint_11690 .xl6411690{
 	padding-top:1px;
@@ -57,7 +57,8 @@
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-	white-space:nowrap;}
+
+	}
 #reprint_11690 .xl6511690
 	{padding-top:1px;
 	padding-right:1px;
@@ -75,7 +76,8 @@
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-	white-space:nowrap;}
+;
+	}
 #reprint_11690 .xl6611690
 	{color:black;
 	font-size:11.0pt;
@@ -89,9 +91,10 @@
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-	white-space:nowrap;
+
 	padding-left:12px;
-	mso-char-indent-count:1;}
+	mso-char-indent-count:1;
+	}
 #reprint_11690 .xl6711690
 	{color:black;
 	font-size:11.0pt;
@@ -105,6 +108,6 @@
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-	white-space:nowrap;
 	padding-left:24px;
-	mso-char-indent-count:2;}
+	mso-char-indent-count:2;
+	}
