--- a/TOC/reprint/reprint.css
+++ b/TOC/reprint/reprint.css
@@ -1,13 +1,21 @@
 body {
+	height:100%;
 	margin: 0;
 	background: #d9d9d9;
 	font-family: Futura,Trebuchet MS,sans-serif,Arial;
 }
 h1 {
+	font-size: 3em;
 	text-align:center;
 	 }	 
     h2 {
  font-size: 1em;
+}
+#issue_table {
+	height: calc(100vh - 150px);
+}
+#print_table {
+	height: calc(100vh - 150px);
 }
    .center {
   display: block;
@@ -127,6 +135,7 @@ div.desc {
 * {
   box-sizing: border-box;
 }
+
 .responsive {
   padding: 0 6px;
   float: left;
@@ -134,12 +143,18 @@ div.desc {
   margin: 6px 0;	
 }
 @media only screen and (max-width: 700px) {
+	h1 {
+	font-size: 2em;
+	}
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
   }
 }
 @media only screen and (max-width: 500px) {
+  h1 {
+	font-size: 1.5em;
+	}
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
