--- a/TOC/reprint/reprint.css
+++ b/TOC/reprint/reprint.css
@@ -1,167 +1,75 @@
 body {
-	height:100%;
-	margin: 0;
 	background: #d9d9d9;
 	font-family: Futura,Trebuchet MS,sans-serif,Arial;
 }
-h1 {
-	font-size: 3em;
-	text-align:center;
-	 }	 
-    h2 {
- font-size: 1em;
-}
-#issue_table {
-	height: calc(100vh - 150px);
-}
-#print_table {
-	height: calc(100vh - 150px);
-}
-   .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  }.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-.navbar .lang {
-  float: right;
-  margin-right: 15px;
-
-}
-.navbar .fit{
-  max-width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
-  }
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #d9d9d9;
-  color: black;
-}
-
-.dropdown-content {
-  display: none;
-  position: fixed;
-  background-color: #f9f9f9;
-  min-width: 50px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}	
- .content {
-  max-width: 1080px;
-  margin-top:60px;
-  margin-left: auto;
-  margin-right: auto;
-  }
-div.gallery  a {
-     text-decoration: none;
-}
-div.gallery  a {
-	color: black;
-}
-div.gallery  a:link {
-	color: black;
-}
-div.gallery  a:visited {
-	color: black;
-}
-div.gallery  a:hover {
-	color: white;
-}
-div.gallery  a:active {
-	color: black;
-}
-div.gallery {
-  border: 1px solid #ccc;
-}
-div.gallery:hover {
-  border: 1px solid #777;
-}
-div.gallery img {
+#container {
   width: 100%;
-  height: auto;
+  height: 100%;
+  position: relative;
 }
-div.desc {
-  padding: 10px;
-  text-align: center;
-}
-* {
-  box-sizing: border-box;
+h2 {
+	font-size: 1.5em;
+	text-align:center;
+	 }	
+#FilterableTable {
+  width: 95%;
+  height: 100%;
+  margin: 10px 0px;
+  position: relative;
+  left: 2%;
+  right: 2%;
 }
 
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 49.99999%;
-  margin: 6px 0;	
+.SearchBar { 
+  display: inline; 
+  position: relative;
+  left: 1%;
 }
-@media only screen and (max-width: 700px) {
-	h1 {
-	font-size: 2em;
-	}
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
+
+.SearchBar input {
+  position: relative;
+  left: 2%;
 }
-@media only screen and (max-width: 500px) {
-  h1 {
-	font-size: 1.5em;
-	}
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
+
+table { 
+ width: 95%;
+  position: relative;
+  top: 10px;
+  left: 2%;
+  right: 2%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
 }
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+
+table a:link, a:visited { text-decoration: none; }
+
+table a:hover, a:active { text-decoration: underline; }
+
+table, th, td { border: 1px solid black; }
+
+td, th {
+  padding: 5px;
+  text-align: center;
+  height: 20px;
+}
+
+th {
+  background-color: #4393c3;
+  color: #d9f0a3;
+}
+
+td {background: #d9d9d1;}
+
+tr:hover td { background-color: #edf8b1; }
+
+table td:nth-child(1){
+	width: 10%;
+	text-align: center;
+}
+table td:nth-child(2){
+	text-align: left;
+}
+table td:nth-child(3){
+	width: 20%;
+	text-align: left;
 }
