--- a/TOC/reprint/reprint.css
+++ b/TOC/reprint/reprint.css
@@ -12,7 +12,10 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 50%;	
-}	
+}
+#year-nav a:link {
+	 text-decoration: none;
+}	 
 h2 {
 	font-size: 1.5em;
 	text-align:center;
