--- a/TOC/reprint/reprint.css
+++ b/TOC/reprint/reprint.css
@@ -42,6 +42,7 @@ h2 {
 
 table { 
  width: 95%;
+font-family:  Calibri;	
   position: relative;
   top: 10px;
   left: 2%;
@@ -67,7 +68,10 @@ th {
   color: #d9f0a3;
 }
 
-td {background: #d9d9d1;}
+td {
+	font-family:  Monaco, monospace;
+	background: #d9d9d1;
+}
 
 tr:hover td { background-color: #edf8b1; }
 
